--- a/eleks/nft/plutus-starter.cabal
+++ b/eleks/nft/plutus-starter.cabal
@@ -49,9 +49,10 @@ library
 test-suite plutus-example-projects-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
-  hs-source-dirs: src/test1
+  hs-source-dirs: src/test
   other-modules:
-    Spec.Game
+    Spec.NFT
+    Spec.TestNFTCurrency
   default-language: Haskell2010
   ghc-options: -Wall -Wnoncanonical-monad-instances
               -Wincomplete-uni-patterns -Wincomplete-record-updates
@@ -65,7 +66,11 @@ test-suite plutus-example-projects-test
     plutus-ledger -any,
     plutus-starter -any
   build-depends:
+    aeson -any,
     base >=4.9 && <5,
+    bytestring,
+    freer-extras,
+    text -any,
     tasty -any,
     tasty-hunit -any,
     tasty-hedgehog >=0.2.0.0
