--- a/AltLabs/dex-token-swap/plutus-starter.cabal
+++ b/AltLabs/dex-token-swap/plutus-starter.cabal
@@ -37,6 +37,7 @@ library
       MyModule
       Plutus.Contracts
       -- Plutus.PAB.Effects.ContractTest.Uniswap
+      Plutus.Contracts.PubKey
       Plutus.Contracts.Uniswap
       Plutus.Contracts.Currency
     build-depends:
