--- a/eleks/nft/plutus-starter.cabal
+++ b/eleks/nft/plutus-starter.cabal
@@ -23,8 +23,10 @@ maintainer:         Your email
 
 library
     exposed-modules:
-      NFT
       Contracts.NFT
+      Contracts.NFT.Types
+      Contracts.NFT.OnChain
+      Contracts.NFT.OffChain
     build-depends:
       base >= 4.9 && < 5,
       aeson,
@@ -40,7 +42,7 @@ library
       plutus-ledger,
       plutus-ledger-api,
       plutus-use-cases
-    hs-source-dirs: src src/Contracts examples/src
+    hs-source-dirs: src src/Contracts/NFT
     default-language: Haskell2010
     ghc-options:
             -- See Plutus Tx readme
