add list of supported tokens found in token pool

--- a/use-case-2/backend/backend.cabal
+++ b/use-case-2/backend/backend.cabal
@@ -33,6 +33,7 @@ library
                , rhyolite-backend-notification-postgres
                , obelisk-backend
                , obelisk-route
+               , vector
                , vessel
   exposed-modules:
     Backend
