--- a/AltLabs/dex-token-swap/plutus-starter.cabal
+++ b/AltLabs/dex-token-swap/plutus-starter.cabal
@@ -68,9 +68,9 @@ library
 test-suite plutus-example-projects-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
-  hs-source-dirs: examples/test
-  other-modules:
-    Spec.Game
+  hs-source-dirs: specs
+  -- other-modules:
+  --   Spec.Game
   default-language: Haskell2010
   default-extensions: ExplicitForAll ScopedTypeVariables
                         DeriveGeneric StandaloneDeriving DeriveLift
