explicit components in hie.yml seem to yield better vscode integration with HLS

--- a/AltLabs/dex-token-swap/hie.yaml
+++ b/AltLabs/dex-token-swap/hie.yaml
@@ -1,2 +1,6 @@
 cradle:
   cabal:
+    - path: "./pab"
+      component: "exe:plutus-starter-pab"
+    - path: "./src"
+      component: "lib:plutus-starter"
