--- a/dquadrant/nft/plutus-tokens.cabal
+++ b/dquadrant/nft/plutus-tokens.cabal
@@ -45,7 +45,8 @@ library
       lens,
       text,
       containers,
-      utf8-string
+      utf8-string,
+      string-conversions
     hs-source-dirs: src
     default-language: Haskell2010
     ghc-options:
