--- a/eleks/nft/cabal.project
+++ b/eleks/nft/cabal.project
@@ -17,7 +17,7 @@ source-repository-package
     playground-common
     plutus-core 
     plutus-contract 
-    plutus-ledger 
+    plutus-ledger
     plutus-ledger-api 
     plutus-tx 
     plutus-tx-plugin 
@@ -25,7 +25,8 @@ source-repository-package
     plutus-use-cases
     prettyprinter-configurable
     quickcheck-dynamic
-  tag: 476409eaee94141e2fe076a7821fc2fcdec5dfcb
+    word-array
+  tag: 6f834b5ca2276cb4bde0f25d8bf9518c3ff592b7
 
 -- The following sections are copied from the 'plutus' repository cabal.project at the revision
 -- given above. 
@@ -142,3 +143,8 @@ source-repository-package
   type: git
   location: https://github.com/input-output-hk/goblins
   tag: cde90a2b27f79187ca8310b6549331e59595e7ba
+
+source-repository-package
+  type: git
+  location: https://github.com/Quid2/flat.git
+  tag: 95e5d7488451e43062ca84d5376b3adcc465f1cd
