--- a/eleks/nft/nft-market.cabal
+++ b/eleks/nft/nft-market.cabal
@@ -41,7 +41,7 @@ library
       plutus-tx,
       plutus-ledger,
       plutus-ledger-api,
-      plutus-use-cases
+      plutus-use-cases,
     hs-source-dirs: src src/Contracts/NFT
     default-language: Haskell2010
     ghc-options:
@@ -55,6 +55,7 @@ test-suite plutus-example-projects-test
   other-modules:
     Spec.NFT
     Spec.TestNFTCurrency
+    Spec.Types
   default-language: Haskell2010
   ghc-options: -Wall -Wnoncanonical-monad-instances
               -Wincomplete-uni-patterns -Wincomplete-record-updates
@@ -62,17 +63,19 @@ test-suite plutus-example-projects-test
               -- See Plutus Tx readme
               -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
   build-depends:
+    nft-market -any,
     playground-common,
     plutus-tx -any,
     plutus-tx-plugin,
     plutus-contract -any,
     plutus-ledger -any,
-    nft-market -any
+    plutus-use-cases -any
   build-depends:
     aeson -any,
     base >=4.9 && <5,
     bytestring,
     freer-extras,
+    lens -any,
     text -any,
     tasty -any,
     tasty-hunit -any,
