--- a/MetaLamp/lending-pool/cabal.project
+++ b/MetaLamp/lending-pool/cabal.project
@@ -22,11 +22,11 @@ source-repository-package
     plutus-tx
     plutus-tx-plugin
     plutus-pab
-    plutus-ledger-api
     plutus-use-cases
     prettyprinter-configurable
     quickcheck-dynamic
-  tag: 58bf9ed626d498c140c69a859a508da03843d097
+    word-array
+  tag: 5cdd2c3d708bf4c33514681dee096da6463273b7
 
 -- The following sections are copied from the 'plutus' repository cabal.project at the revision
 -- given above.
@@ -72,27 +72,23 @@ source-repository-package
   location: https://github.com/input-output-hk/cardano-crypto.git
   tag: f73079303f663e028288f9f4a9e08bcca39a923e
 
--- Needs a fix (https://github.com/wenkokke/unlit/pull/11) and a Hackage release
-source-repository-package
-  type: git
-  location: https://github.com/michaelpj/unlit.git
-  tag: 9ca1112093c5ffd356fc99c7dafa080e686dd748
-
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-base
-  tag: 4251c0bb6e4f443f00231d28f5f70d42876da055
+  tag: a715c7f420770b70bbe95ca51d3dec83866cb1bd
   subdir:
     binary
     binary/test
     slotting
     cardano-crypto-class
     cardano-crypto-praos
+    cardano-crypto-tests
+    strict-containers
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-prelude
-  tag: ee4e7b547a991876e6b05ba542f4e62909f4a571
+  tag: fd773f7a58412131512b9f694ab95653ac430852
   subdir:
     cardano-prelude
     cardano-prelude-test
@@ -100,17 +96,20 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/ouroboros-network
-  tag: 6cb9052bde39472a0555d19ade8a42da63d3e904
+  tag: e50613562d6d4a0f933741fcf590b0f69a1eda67
   subdir:
     typed-protocols
     typed-protocols-examples
     ouroboros-network
     ouroboros-network-testing
     ouroboros-network-framework
+    ouroboros-consensus
+    ouroboros-consensus-byron
+    ouroboros-consensus-cardano
+    ouroboros-consensus-shelley
     io-sim
     io-sim-classes
     network-mux
-    Win32-network
 
 source-repository-package
   type: git
@@ -125,7 +124,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-ledger-specs
-  tag: 097890495cbb0e8b62106bcd090a5721c3f4b36f
+  tag: a3ef848542961079b7cd53d599e5385198a3035c
   subdir:
     byron/chain/executable-spec
     byron/crypto
@@ -137,7 +136,22 @@ source-repository-package
     semantics/small-steps-test
     shelley/chain-and-ledger/dependencies/non-integer
     shelley/chain-and-ledger/executable-spec
+    shelley/chain-and-ledger/shelley-spec-ledger-test
     shelley-ma/impl
+    cardano-ledger-core
+    alonzo/impl
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/cardano-node.git
+  tag: b3cabae6b3bf30a0b1b4e78bc4b67282dabad0a6
+  subdir:
+    cardano-api
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/Win32-network
+  tag: 94153b676617f8f33abe8d8182c37377d2784bd1
 
 source-repository-package
   type: git
