Finalize minting/burning scripts and add tests

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -56,6 +56,7 @@ library
         Mlabs.Data.Maybe
         Mlabs.Data.Ray
         Mlabs.Data.Ord
+        Mlabs.Demo.Contract.Burn
         Mlabs.Demo.Contract.Mint
         Mlabs.Emulator.App
         Mlabs.Emulator.Blockchain
