add wallet ADA balance to navigation bar

--- a/use-case-2/frontend/frontend.cabal
+++ b/use-case-2/frontend/frontend.cabal
@@ -16,6 +16,7 @@ library
                , obelisk-generated-static
                , rhyolite-frontend
                , safe
+               , scientific
                , text
                , vessel
   exposed-modules:
