--- a/use-case-2/frontend/frontend.cabal
+++ b/use-case-2/frontend/frontend.cabal
@@ -18,6 +18,7 @@ library
                , safe
                , scientific
                , text
+               , unordered-containers
                , vessel
   exposed-modules:
     Frontend
