shutdown PAB on sigint/sigterm instead of the "anykey"

--- a/AltLabs/dex-token-swap/plutus-starter.cabal
+++ b/AltLabs/dex-token-swap/plutus-starter.cabal
@@ -55,6 +55,8 @@ library
       aeson-pretty -any,
       containers,
       text,
+      stm -any,
+      unix,
       lens -any,
       bytestring,
       playground-common,
@@ -117,6 +119,8 @@ executable plutus-starter-pab
     text -any,
     lens -any,
     bytestring -any,
+    stm -any,
+    unix,
     plutus-contract -any,
     plutus-pab -any,
     plutus-starter -any,
