Fix ada balance and token balance display bug

--- a/use-case-2/frontend/frontend.cabal
+++ b/use-case-2/frontend/frontend.cabal
@@ -8,6 +8,7 @@ library
   build-depends: base
                , common
                , containers
+               , groom
                , obelisk-frontend
                , obelisk-route
                , jsaddle
