--- a/MetaLamp/lending-pool/cabal.project
+++ b/MetaLamp/lending-pool/cabal.project
@@ -27,6 +27,7 @@ source-repository-package
     quickcheck-dynamic
     word-array
   tag: 5cdd2c3d708bf4c33514681dee096da6463273b7
+  --sha256: 0j6614dhrd5gxigcpghsd014nwcp57rz489h9d207zxgdmcvhha1
 
 -- The following sections are copied from the 'plutus' repository cabal.project at the revision
 -- given above.
@@ -61,27 +62,32 @@ source-repository-package
   type: git
   location: https://github.com/shmish111/purescript-bridge.git
   tag: 6a92d7853ea514be8b70bab5e72077bf5a510596
+  --sha256: 13j64vv116in3c204qsl1v0ajphac9fqvsjp7x3zzfr7n7g61drb
 
 source-repository-package
   type: git
   location: https://github.com/shmish111/servant-purescript.git
   tag: a76104490499aa72d40c2790d10e9383e0dbde63
+  --sha256: 11nxxmi5bw66va7psvrgrw7b7n85fvqgfp58yva99w3v9q3a50v9
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-crypto.git
   tag: f73079303f663e028288f9f4a9e08bcca39a923e
+  --sha256: 1n87i15x54s0cjkh3nsxs4r1x016cdw1fypwmr68936n3xxsjn6q
 
 -- Needs a fix (https://github.com/wenkokke/unlit/pull/11) and a Hackage release
 source-repository-package
   type: git
   location: https://github.com/michaelpj/unlit.git
   tag: 9ca1112093c5ffd356fc99c7dafa080e686dd748
+  --sha256: 145sffn8gbdn6xp9q5b75yd3m46ql5bnc02arzmpfs6wgjslfhff
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-base
   tag: 4251c0bb6e4f443f00231d28f5f70d42876da055
+  --sha256: 02a61ymvx054pcdcgvg5qj9kpybiajg993nr22iqiya196jmgciv
   subdir:
     binary
     binary/test
@@ -93,6 +99,7 @@ source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-prelude
   tag: ee4e7b547a991876e6b05ba542f4e62909f4a571
+  --sha256: 0dg6ihgrn5mgqp95c4f11l6kh9k3y75lwfqf47hdp554w7wyvaw6
   subdir:
     cardano-prelude
     cardano-prelude-test
@@ -101,6 +108,7 @@ source-repository-package
   type: git
   location: https://github.com/input-output-hk/ouroboros-network
   tag: 6cb9052bde39472a0555d19ade8a42da63d3e904
+  --sha256: 0rz4acz15wda6yfc7nls6g94gcwg2an5zibv0irkxk297n76gkmg
   subdir:
     typed-protocols
     typed-protocols-examples
@@ -116,6 +124,7 @@ source-repository-package
   type: git
   location: https://github.com/input-output-hk/iohk-monitoring-framework
   tag: a89c38ed5825ba17ca79fddb85651007753d699d
+  --sha256: 0i4p3jbr9pxhklgbky2g7rfqhccvkqzph0ak5x8bb6kwp7c7b8wf
   subdir:
     iohk-monitoring
     tracer-transformers
@@ -126,6 +135,7 @@ source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-ledger-specs
   tag: 097890495cbb0e8b62106bcd090a5721c3f4b36f
+  --sha256: 0i3y9n0rsyarvhfqzzzjccqnjgwb9fbmbs6b7vj40afjhimf5hcj
   subdir:
     byron/chain/executable-spec
     byron/crypto
@@ -143,8 +153,10 @@ source-repository-package
   type: git
   location: https://github.com/input-output-hk/goblins
   tag: cde90a2b27f79187ca8310b6549331e59595e7ba
+  --sha256: 17c88rbva3iw82yg9srlxjv2ia5wjb9cyqw44hik565f5v9svnyg
 
 source-repository-package
   type: git
   location: https://github.com/Quid2/flat.git
   tag: 95e5d7488451e43062ca84d5376b3adcc465f1cd
+  --sha256: 06l31x3y93rjpryvlxnpsyq2zyxvb0z6lik6yq2fvh36i5zwvwa3
