update: added README TOC generation to makefile

--- a/mlabs/Makefile
+++ b/mlabs/Makefile
@@ -22,3 +22,5 @@ requires_nix_shell:
 	@ [ "($IN_NIX_SHELL)" ] || echo "The $(MAKECMDGOALS) target must be run from inside nix-shell"
 	@ [ "($IN_NIX_SHELL)" ] || (echo "    run 'nix-shell --pure' first" && false)
 
+readme_contents:
+	nix-shell -p nodePackages.npm --command "npx markdown-toc ./README.md --no-firsth1"
