--- a/mlabs/Makefile
+++ b/mlabs/Makefile
@@ -22,5 +22,7 @@ requires_nix_shell:
 	@ [ "($IN_NIX_SHELL)" ] || echo "The $(MAKECMDGOALS) target must be run from inside nix-shell"
 	@ [ "($IN_NIX_SHELL)" ] || (echo "    run 'nix-shell --pure' first" && false)
 
+# Generate TOC for README.md
+# It has to be manually inserted into the README.md for now.
 readme_contents:
 	nix-shell -p nodePackages.npm --command "npx markdown-toc ./README.md --no-firsth1"
