--- a/dquadrant/nft/plutus-tokens.cabal
+++ b/dquadrant/nft/plutus-tokens.cabal
@@ -24,14 +24,18 @@ maintainer:         IOHK
 library
     exposed-modules:
       -- Plutus.Contract.Wallet.Erc20
-      -- Plutus.Contract.Wallet.NFT
-      -- Plutus.Contract.Wallet.NFTHolder
+      Plutus.Contract.Wallet.Nft
+      Plutus.Contract.Wallet.MarketPlace
+      Plutus.Contract.Wallet.MarketEndpoints
       Plutus.Contract.Blockchain.MarketPlace
+      Plutus.Contract.Wallet.EndpointModels
+      Plutus.Contract.Blockchain.Nft
+      Plutus.Contract.Wallet.Utils
 
-    -- other-modules:
-    --   Plutus.Contract.Blockchain.Erc20
-    --   Plutus.Contract.Blockchain.NFT
-    --   Plutus.Contract.Blockchain.NFTHolder
+
+    other-modules:
+      Plutus.Contract.Data.Payment
+      Plutus.Contract.Blockchain.Utils
 
     build-depends:
       base >= 4.9 && < 5,
@@ -58,7 +62,8 @@ test-suite tokens-test
   main-is: Main.hs
   hs-source-dirs: test
   other-modules:
-    Test.MarketPlace
+    Test.MarketEndpointTest
+    Test.TestHelper
   default-language: Haskell2010
   ghc-options: -Wall -Wnoncanonical-monad-instances
               -Wincomplete-uni-patterns -Wincomplete-record-updates
@@ -71,9 +76,15 @@ test-suite tokens-test
     plutus-contract -any,
     plutus-ledger -any,
     plutus-tokens -any,
+    plutus-pab -any,
     playground-common -any,
     aeson -any,
-
+    lens,
+    text,
+    containers,
+    utf8-string,
+    freer-extras,
+    string-conversions,
   build-depends:
     base >=4.9 && <5,
     tasty -any,
@@ -95,6 +106,7 @@ executable tokens-pab
     prettyprinter -any,
     freer-extras -any,
     plutus-ledger -any,
-    plutus-tokens -any,
+    plutus-tokens,
     text -any,
+    bytestring -any,
     prettyprinter -any
