--- a/MetaLamp/lending-pool/plutus-starter.cabal
+++ b/MetaLamp/lending-pool/plutus-starter.cabal
@@ -102,7 +102,7 @@ test-suite test
     main-is: Main.hs
     hs-source-dirs: test
     other-modules:
-      Spec.Start Spec.Mock Spec.User Spec.Utils
+      Spec.Start Spec.Deposit Spec.Withdraw Spec.Shared Utils.Data Utils.Trace Fixtures Fixtures.Aave Fixtures.Asset Fixtures.Init Fixtures.Wallet
     default-language: Haskell2010
     ghc-options: -Wall -Wnoncanonical-monad-instances
                  -Wincomplete-uni-patterns -Wincomplete-record-updates
