--- a/MetaLamp/lending-pool/client/package.json
+++ b/MetaLamp/lending-pool/client/package.json
@@ -26,8 +26,10 @@
     "jquery": "^3.3.1",
     "json-bigint": "^1.0.0",
     "node-sass": "^4.12.0",
+    "purescript": "^0.13.6",
     "purs-loader": "^3.6.0",
     "sass-loader": "^7.1.0",
+    "spago": "^0.20.3",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "uuid": "^7.0.2",
