update: added fourmolu formatting as per Standards

--- a/mlabs/Makefile
+++ b/mlabs/Makefile
@@ -1,3 +1,4 @@
+.PHONY: hoogle build repl test watch test-watch requires_nix_shell fourmolu-format
 
 hoogle: requires_nix_shell
 	hoogle server --local --port 8008
@@ -21,4 +22,13 @@ test-watch:
 requires_nix_shell:
 	@ [ "($IN_NIX_SHELL)" ] || echo "The $(MAKECMDGOALS) target must be run from inside nix-shell"
 	@ [ "($IN_NIX_SHELL)" ] || (echo "    run 'nix-shell --pure' first" && false)
+
+# Format the haskell files as per Specifications.md.
+# Add folder locations to the list to be reformatted. 
+fourmolu-format:
+	@ echo "> Formatting all .hs files"
+	fourmolu -i $$(find src/  -iregex ".*.hs")
+	fourmolu -i $$(find test/ -iregex ".*.hs")
+	fourmolu -i $$(find app/  -iregex ".*.hs")
+
 
