--- a/dquadrant/nft/client/package.json
+++ b/dquadrant/nft/client/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.14.0",
     "dotenv-webpack": "^3.0.0",
+    "font-awesome": "^4.7.0",
     "moment": "^2.29.1",
     "vue": "^2.6.13",
     "vue-router": "^3.5.1",
