--- a/use-case-2/backend/backend.cabal
+++ b/use-case-2/backend/backend.cabal
@@ -31,6 +31,7 @@ library
                , rhyolite-backend
                , rhyolite-backend-db
                , rhyolite-backend-notification-postgres
+               , text
                , obelisk-backend
                , obelisk-route
                , vector
