--- a/dquadrant/nft/client/package.json
+++ b/dquadrant/nft/client/package.json
@@ -8,13 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "as-hex": "^1.0.1",
     "axios": "^0.21.1",
     "bootstrap-vue": "^2.21.2",
+    "buffer": "^6.0.3",
     "core-js": "^3.14.0",
     "dotenv-webpack": "^3.0.0",
     "font-awesome": "^4.7.0",
     "luxon": "^1.27.0",
     "moment": "^2.29.1",
+    "string-hex": "^1.0.0",
     "vue": "^2.6.13",
     "vue-datetime": "^1.0.0-beta.14",
     "vue-router": "^3.5.1",
